<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/history_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="#bdbdbd"
    android:orientation="vertical"
    tools:context=".HistoryActivity">

    <TextView
        android:id="@+id/day7History"
        android:layout_width="360dp"
        android:layout_height="88dp"
        android:drawableEnd="@drawable/history_comment_image"
        android:drawablePadding="16dp"
        android:padding="7dp"
        android:paddingTop="3dp"
        android:text="@string/day_7_history"
        android:textIsSelectable="false"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/day6History"
        android:layout_width="360dp"
        android:layout_height="88dp"
        android:drawableEnd="@drawable/history_comment_image"
        android:drawablePadding="16dp"
        android:padding="7dp"
        android:paddingTop="3dp"
        android:text="@string/day_6_history"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/day5History"
        android:layout_width="360dp"
        android:layout_height="88dp"
        android:drawableEnd="@drawable/history_comment_image"
        android:drawablePadding="16dp"
        android:padding="7dp"
        android:paddingTop="3dp"
        android:text="@string/day_5_history"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/day4History"
        android:layout_width="360dp"
        android:layout_height="88dp"
        android:drawableEnd="@drawable/history_comment_image"
        android:drawablePadding="16dp"
        android:padding="7dp"
        android:paddingTop="3dp"
        android:text="@string/day_4_history"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/day3History"
        android:layout_width="360dp"
        android:layout_height="88dp"
        android:drawableEnd="@drawable/history_comment_image"
        android:drawablePadding="16dp"
        android:padding="7dp"
        android:paddingTop="3dp"
        android:text="@string/day_3_history"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/day2History"
        android:layout_width="360dp"
        android:layout_height="88dp"
        android:drawableEnd="@drawable/history_comment_image"
        android:drawablePadding="16dp"
        android:padding="7dp"
        android:paddingTop="3dp"
        android:text="@string/day_2_history"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/day1History"
        android:layout_width="360dp"
        android:layout_height="88dp"
        android:drawableEnd="@drawable/history_comment_image"
        android:drawablePadding="16dp"
        android:padding="7dp"
        android:paddingTop="3dp"
        android:text="@string/day_1_history"
        android:textSize="15sp"
        android:textStyle="bold" />


</LinearLayout>