<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_sage"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/smiley_faces"
        android:layout_width="256dp"
        android:layout_height="269dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/happy_face"
        android:src="@drawable/smiley_happy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469" />

    <Button
        android:id="@+id/addnotebutton"
        android:layout_width="45dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/addnotebutton"
        android:src="@drawable/addnotebutton"
        android:text="@string/custom_note_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/moodhistorybutton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/moodhistorybutton"
        android:layout_width="61dp"
        android:layout_height="53dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/moodhistorybutton"
        android:src="@drawable/moodhistorybutton"
        android:text="@string/mood_history_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>